# sky_calendar

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  example.env  pyproject.toml  requirements.txt
.github/workflows/: action.yml
deploy/: docker-compose_ci.yaml  vault.env
src/: .dockerignore  Dockerfile  entrypoint.sh  tg_test.py
src/bot/: admin.py  models.py  serializers.py  urls.py  views.py
src/bot/management/commands/: runbot.py
src/bot/migrations/: 0001_initial.py  0002_rename_char_id_tguser_chat_id.py
src/bot/tg/: client.py  models.py
src/bot/tg/fsm/: base.py  memory_storage.py
src/core/: admin.py  models.py  serializers.py  urls.py  views.py
src/core/migrations/: 0001_initial.py
src/goals/: admin.py  filters.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
src/goals/migrations/: 0001_initial.py  0002_alter_goalcategory_user_goal.py  0003_goalcomment.py  0004_board_goalcategory_board_boardparticipant.py  0005_create_new_objects.py  0006_alter_goalcategory_board_alter_goalcategory_user.py  0007_alter_boardparticipant_board_and_more.py
src/tests/: test_board.py  test_category.py  test_comment.py  test_goal.py  test_user.py
src/todolist/: settings.py  urls.py
